minio/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio
  namespace: minio
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`minio.cgraaaj.in`)
      kind: Rule
      services:
        - name: minio-console
          port: 9001
      middlewares:
        - name: default-headers
          namespace: default
  # tls:
  #   secretName: authentik-cgraaaj-in-tls
